--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Efe Karabulut's Portfolio</h1>
-    <h2>I'm a Web Developer</h2>
+    <h2>I'm a Software Developer</h2>
     <hr />
     <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
     <img src="./assets/images/movie-ranking.png" height="200" alt="Efe Karabulut's top movies Project image">
